<resources>
    <string name="app_name">Bookr</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_book_display">BookDisplayActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_my_borrowing">MyBorrowingActivity</string>
    <string name="title_activity_my_bidded">MyBiddedActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_edit_book">EditBookActivity</string>
    <string name="title_activity_bids_display">BidsDisplayActivity</string>
    <string name="api_key">AIzaSyDsqdX-542x2YR8i-d-qR3163mpmWHvOZk</string>
    // added users -- noun

    <string name="username"> Username</string>
    <string name="password">Password</string>
    <string name="userBorrowed">User Borrowed</string>
    <string name="userBids">User Bids</string>
    <string name="owner">Owner</string>
    <string name="newBid">New Bid</string>
    <string name="amount">Amount</string>
    <string name="bidList">Bid List</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="mobile">Mobile</string>
    <string name="personal">Personal</string>
    <string name="birthday">Birthday</string>
    <string name="bids">Bids</string>
    <string name="exchangedBooks">Exchanged Books</string>
    <string name="popular">POPULAR</string>
    <string name="recent">Recent</string>
    <string name="letter">A-Z</string>
    <string name="min">min</string>
    <string name="myProfile">My Profile</string>
    <string name="myBook">My Books</string>
    <string name="email">Email</string>
    <string name="aboutMe">About Me</string>
    <string name="myBid">My Bids</string>
    <string name="myBorrow">My Borrowing</string>
    <string name="thumbnail">*Thumbnail*</string>
    <string name="borrower">Borrower</string>
    <string name="location">Pickup Location</string>
    // added action

    <string name="logIn">Log In</string>
    <string name="register">Register</string>
    <string name="saveReg">Save</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="editBook">Edit Book</string>
    <string name="editProfile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="Return">Return</string>
    <string name="remove">Remove Bid</string>
    <string name="addBid">Add Bid</string>
    <string name="confirmPwd">Confirm Password</string>
    <string name="owned">Owned</string>
    <string name="searching">…</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_owner_info">OwnerInfoActivity</string>
    <string name="user_not_found">Username not found</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_books">MyBooksActivity</string>
    <string name="available">Available</string>
    <string name="bidded">Bidded</string>
    <string name="borrowed">Borrowed</string>
    <string name="deleteBook">Delete Book</string>
    <string name="myBidsButton">My Bids</string>
    <string name="myBorrowedButton">Borrowed</string>
    <string name="notifications">Notifications</string>
    <string name="delete">Delete</string>
    <string name="bidInfo">Bid Info</string>
    <string name="acceptBid">Accept</string>
    <string name="declineBid">Decline</string>
    <string name="tvFirstName">First Name</string>
    <string name="tvLastName">Last Name</string>
    <string name="tvPhoneNumber">Phone Number</string>
    <string name="all">All</string>
    <string name="add_book">Add Book</string>
    <string name="username_minlen">Username should be minimum 5 characters</string>
    <string name="username_unavailable">Username not available, try again</string>
    <string name="user_notexist">User does not exist, please register first.</string>
    <string name="i_bid">I bid $</string>
    <string name="per_hour">/hr</string>
    <string name="location_set">Location for pickup set</string>
    <string name="your_bid">Your Bid</string>
    <string name="bid">Bid</string>
    <string name="hasmadeabidof">" has made a bid of $"</string>
    <string name="onyourbook">"/hr on your book, "</string>
    <string name="cancel">Cancel</string>
    <string name="pickup_location">Pickup Location</string>
</resources>
