<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.ualberta.appfive.UserProfileActivity"
    tools:showIn="@layout/activity_user_profile"
    android:background="@drawable/display_template" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/username"
        android:layout_marginTop="57dp"
        android:layout_alignParentTop="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvFirstName"
        android:id="@+id/FirstNametv"
        android:layout_below="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvLastName"
        android:id="@+id/LastNametv"
        android:layout_below="@+id/FirstNametv"
        android:layout_marginTop="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/textView4"
        android:layout_below="@+id/LastNametv"
        android:layout_marginTop="27dp"/>

    <TextView
        android:text="@string/tvPhoneNumber"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number"
        android:layout_centerVertical="true"
        android:layout_below="@id/textView4"
        android:layout_marginTop="27dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/editbutton"
        android:layout_below="@+id/phone_number"
        android:layout_alignEnd="@+id/phone_number" />


</RelativeLayout>
