<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.ualberta.appfive.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@drawable/display_template">
    <TextView
        android:id="@+id/TVAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20pt"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginBottom="133dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/ETUserNameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username"
        android:layout_alignTop="@+id/TVAppTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/ETPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@+id/ETUserNameLogin"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:layout_gravity="center_horizontal"
        android:textSize="10pt"
        android:layout_below="@+id/registerButton"
        android:layout_alignStart="@+id/registerButton" />
    <Button
        android:id="@+id/registerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:textSize="10pt"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
