<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="ca.ualberta.appfive.EditBookActivity"
            tools:showIn="@layout/activity_edit_book"
            android:background="@drawable/display_template"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
              android:text="@string/editBook"
              android:textSize="15pt"
              android:layout_marginTop="@dimen/fab_margin"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:id="@+id/editBookTitle" />

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/editThumbnail"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/deleteImage" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="10pt"
                android:layout_gravity="start" />

            <EditText
                android:id="@+id/edittitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
         />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="10pt"
                android:layout_gravity="start"
          />

            <EditText
                android:id="@+id/editauthor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/author"
              />



            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="10pt"
                android:layout_gravity="start"
          />

            <EditText
                android:id="@+id/editgenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre"
          />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="10pt"
                android:layout_gravity="start"
         />
            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
            />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"
                android:id="@+id/editbookSave"


           />

        </LinearLayout>
    </ScrollView>
</LinearLayout>