<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.ualberta.appfive.BookDisplayActivity"
    tools:showIn="@layout/activity_book_display"
    android:background="@drawable/display_template">

    <Button
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owner"
        android:layout_gravity="center_horizontal"
        android:onClick="logIn"
        android:textSize="10pt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/addBid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addBid"
        android:layout_gravity="center_horizontal"
        android:onClick="register"
        android:textSize="10pt"
        android:layout_alignTop="@+id/owner"
        android:layout_alignParentEnd="true" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20pt"
        android:layout_gravity="top|center_horizontal"
        android:layout_below="@+id/owner"
        android:layout_toStartOf="@+id/owner"
        android:layout_marginTop="92dp" />
    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="20pt"
        android:layout_gravity="top|center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/title" />

</RelativeLayout>
