<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.ualberta.appfive.RegisterActivity"
    tools:showIn="@layout/activity_register"
    android:background="@drawable/display_template"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textSize="15pt"
                android:layout_gravity="top|center_horizontal"
                android:id="@+id/TVRegisterTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/username"
                android:id="@+id/TVUsername"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/ETUsernameRegistration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvFirstName"
                android:id="@+id/TVFirstName"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/ETFirstNameRegistration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tvLastName"
                android:id="@+id/TVLastName"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/ETLastNameRegistration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email"
                android:id="@+id/TVEmail"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/ETEmailRegistration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"/>

            <TextView
                android:text="@string/tvPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TVPhoneNumber"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/ETPhoneNumberRegistration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/saveRegistrationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="10pt"
                android:layout_marginTop="5dp"
                android:layout_gravity="bottom|center_horizontal"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

